--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -72,43 +72,43 @@
         <nav class="categories-menu">
           <ul id="categories-menu" class="subnavbar-list">
             <svg xmlns='http://www.w3.org/2000/svg' width='12' height='13'>
-              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/>
+              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='#F7F6F5'/>
             </svg>
             <li id="menu-item-15" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-15">
               <a href="#honey" aria-current="page">Мёд</a>
             </li>
             <svg xmlns='http://www.w3.org/2000/svg' width='12' height='13'>
-              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/>
+              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='#F7F6F5'/>
             </svg>
             <li id="menu-item-16" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-16">
               <a href="#jam" aria-current="page">Варенье</a>
             </li>
             <svg xmlns='http://www.w3.org/2000/svg' width='12' height='13'>
-              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/>
+              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='#F7F6F5'/>
             </svg>
             <li id="menu-item-17" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-17">
               <a href="tel:+78123288496">Чай</a>
             </li>
             <svg xmlns='http://www.w3.org/2000/svg' width='12' height='13'>
-              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/>
+              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='#F7F6F5'/>
             </svg>
             <li id="menu-item-18" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-18">
               <a href="#herbals">Травяные сборы</a>
             </li>
             <svg xmlns='http://www.w3.org/2000/svg' width='12' height='13'>
-              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/>
+              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='#F7F6F5'/>
             </svg>
             <li id="menu-item-19" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-19">
               <a href="#sweets" aria-current="page">Сладости</a>
             </li>
             <svg xmlns='http://www.w3.org/2000/svg' width='12' height='13'>
-              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/>
+              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='#F7F6F5'/>
             </svg>
             <li id="menu-item-20" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-20">
               <a href="#dishes" aria-current="page">Посуда</a>
             </li>
             <svg xmlns='http://www.w3.org/2000/svg' width='12' height='13'>
-              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/>
+              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='#F7F6F5'/>
             </svg>
           </ul>
         </nav>
@@ -324,13 +324,13 @@
                     <div class="p-button-wrapper">
                       <button class="add-to-cart-button">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="white"/>
-                          <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="white"/>
-                          <path d="M11 2.00098L4 8.00098" stroke="white" stroke-linecap="round"/>
-                          <path d="M13 2.00098L20 8.00098" stroke="white" stroke-linecap="round"/>
-                          <path d="M7.5 14.001L9 19.501" stroke="white" stroke-linecap="round"/>
-                          <path d="M16.5 14.001L15 19.501" stroke="white" stroke-linecap="round"/>
-                          <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
+                          <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="#F7F6F5"/>
+                          <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="#F7F6F5"/>
+                          <path d="M11 2.00098L4 8.00098" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M13 2.00098L20 8.00098" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M7.5 14.001L9 19.501" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M16.5 14.001L15 19.501" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M12 14.501V19.501" stroke="#F7F6F5" stroke-linecap="round"/>
                         </svg>
                       </button>
                     </div>
@@ -354,13 +354,13 @@
                     <div class="p-button-wrapper">
                       <button class="add-to-cart-button">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="white"/>
-                          <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="white"/>
-                          <path d="M11 2.00098L4 8.00098" stroke="white" stroke-linecap="round"/>
-                          <path d="M13 2.00098L20 8.00098" stroke="white" stroke-linecap="round"/>
-                          <path d="M7.5 14.001L9 19.501" stroke="white" stroke-linecap="round"/>
-                          <path d="M16.5 14.001L15 19.501" stroke="white" stroke-linecap="round"/>
-                          <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
+                          <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="#F7F6F5"/>
+                          <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="#F7F6F5"/>
+                          <path d="M11 2.00098L4 8.00098" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M13 2.00098L20 8.00098" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M7.5 14.001L9 19.501" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M16.5 14.001L15 19.501" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M12 14.501V19.501" stroke="#F7F6F5" stroke-linecap="round"/>
                         </svg>
                       </button>
                     </div>
@@ -384,13 +384,13 @@
                     <div class="p-button-wrapper">
                       <button class="add-to-cart-button">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="white"/>
-                          <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="white"/>
-                          <path d="M11 2.00098L4 8.00098" stroke="white" stroke-linecap="round"/>
-                          <path d="M13 2.00098L20 8.00098" stroke="white" stroke-linecap="round"/>
-                          <path d="M7.5 14.001L9 19.501" stroke="white" stroke-linecap="round"/>
-                          <path d="M16.5 14.001L15 19.501" stroke="white" stroke-linecap="round"/>
-                          <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
+                          <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="#F7F6F5"/>
+                          <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="#F7F6F5"/>
+                          <path d="M11 2.00098L4 8.00098" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M13 2.00098L20 8.00098" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M7.5 14.001L9 19.501" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M16.5 14.001L15 19.501" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M12 14.501V19.501" stroke="#F7F6F5" stroke-linecap="round"/>
                         </svg>
                       </button>
                     </div>
@@ -414,13 +414,13 @@
                     <div class="p-button-wrapper">
                       <button class="add-to-cart-button">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="white"/>
-                          <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="white"/>
-                          <path d="M11 2.00098L4 8.00098" stroke="white" stroke-linecap="round"/>
-                          <path d="M13 2.00098L20 8.00098" stroke="white" stroke-linecap="round"/>
-                          <path d="M7.5 14.001L9 19.501" stroke="white" stroke-linecap="round"/>
-                          <path d="M16.5 14.001L15 19.501" stroke="white" stroke-linecap="round"/>
-                          <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
+                          <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="#F7F6F5"/>
+                          <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="#F7F6F5"/>
+                          <path d="M11 2.00098L4 8.00098" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M13 2.00098L20 8.00098" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M7.5 14.001L9 19.501" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M16.5 14.001L15 19.501" stroke="#F7F6F5" stroke-linecap="round"/>
+                          <path d="M12 14.501V19.501" stroke="#F7F6F5" stroke-linecap="round"/>
                         </svg>
                       </button>
                     </div>
