--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -256,7 +256,7 @@
 
           <div class="seasonal-section">
             <div class="seasonal-section-content">
-              <div class="main_pattern">
+              <div class="animated_pattern">
                 <video id="background-video" autoplay="" muted="" poster="./images/seasonal_pattern.svg" onended="videoEnded(this)">
                   <source src="./images/seasonal_pattern.mp4" type="video/mp4">
                 </video>
