--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -261,6 +261,11 @@
                   <source src="./images/seasonal_pattern.mp4" type="video/mp4">
                 </video>
               </div>
+              <div class="animated_pattern_mobile">
+                <video id="animated-video" autoplay="" muted="" poster="./images/seasonal_pattern_mobile.png" onended="videoFinished(this)">
+                  <source src="./images/seasonal_pattern_mobile.mp4" type="video/mp4">
+                </video>
+              </div>
               <div class="seasonal-section-title-wrapper">
                 <div class="seasonal-section-title">Новинка</div>
               </div>
