--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -276,7 +276,9 @@
                     В корзину
                   </button>
                 </div>
-                <img src="./images/autumn_tea.png" class="seasonal-product-img">
+                <div class="seasonal-product-img-wrapper">
+                  <img src="./images/autumn_tea.png" class="seasonal-product-img">
+                </div>
                 <div class="seasonal-product-right">
                   <p>Купаж черного байхового чая цейлонского, кенийского; дольки апельсина, сушенное яблоко, кардамон, корица, пищевой ароматизатор</p>
                   <a href="#autumn_tea" class="more-link">
