--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -273,7 +273,16 @@
                 <div class="seasonal-product-left">
                   <p>Тёплые, пряные, медовые оттенки в осеннем чае Москва</p>
                   <button class="seasonal-buy-button">
-                    В корзину
+                    <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M3.5 12.0002H21.5L18.782 21.2813C18.6572 21.7074 18.2663 22.0002 17.8223 22.0002H7.17772C6.73368 22.0002 6.34282 21.7074 6.21802 21.2813L3.5 12.0002Z" stroke="white"/>
+                      <rect x="1.5" y="8.00024" width="22" height="4" rx="1" stroke="white"/>
+                      <path d="M11.5 2.00024L4.5 8.00024" stroke="white" stroke-linecap="round"/>
+                      <path d="M13.5 2.00024L20.5 8.00024" stroke="white" stroke-linecap="round"/>
+                      <path d="M8 14.0002L9.5 19.5002" stroke="white" stroke-linecap="round"/>
+                      <path d="M17 14.0002L15.5 19.5002" stroke="white" stroke-linecap="round"/>
+                      <path d="M12.5 14.5002V19.5002" stroke="white" stroke-linecap="round"/>
+                    </svg>
+                    <span>В корзину</span>
                   </button>
                 </div>
                 <div class="seasonal-product-img-wrapper">
