--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -47,59 +47,65 @@
 
               <a id="main-content" tabindex="-1"></a>
 
-              <section class="hero is-medium">
-
-                <div class="columns is-centered is-mobile is-multiline">
-                  <div class="column is-11-smart is-11-mobile is-11-tablet is-11-desktop is-10-widescreen is-9-fullhd">
-
-                    <div class="layout-content hero-body">
-
-                      <div class="column is-4 is-offset-4">
-                        <h3 class="title has-text-black">Login</h3>
-                        <hr class="login-hr">
-                        <p class="subtitle has-text-black">Please login to proceed.</p>
-                        <div class="box">
-                          <form>
-                            <div class="field">
-                              <div class="control">
-                                <input class="input is-large" type="email" placeholder="Your Email" autofocus="">
-                              </div>
-                            </div>
-
-                            <div class="field">
-                              <div class="control">
-                                <input class="input is-large" type="password" placeholder="Your Password">
-                              </div>
-                            </div>
-
-                            <div class="field">
-                              <label class="checkbox">
-                                <input type="checkbox">
-                                Remember me
-                              </label>
-                            </div>
-
-                            <button class="button is-block is-info is-large is-fullwidth">
-                              <span class="has-text-black mr-1">Login</span>
-                              <svg xmlns="http://www.w3.org/2000/svg" width="18px" height="15px" viewBox="0 0 18 15">
-                                <path fill="black" d="M 13.875 7.5 C 13.875 7.703125 13.800781 7.878906 13.652344 8.027344 L 7.277344 14.402344 C 7.128906 14.550781 6.953125 14.625 6.75 14.625 C 6.546875 14.625 6.371094 14.550781 6.222656 14.402344 C 6.074219 14.253906 6 14.078125 6 13.875 L 6 10.5 L 0.75 10.5 C 0.546875 10.5 0.371094 10.425781 0.222656 10.277344 C 0.0742188 10.128906 0 9.953125 0 9.75 L 0 5.25 C 0 5.046875 0.0742188 4.871094 0.222656 4.722656 C 0.371094 4.574219 0.546875 4.5 0.75 4.5 L 6 4.5 L 6 1.125 C 6 0.921875 6.074219 0.746094 6.222656 0.597656 C 6.371094 0.449219 6.546875 0.375 6.75 0.375 C 6.953125 0.375 7.128906 0.449219 7.277344 0.597656 L 13.652344 6.972656 C 13.800781 7.121094 13.875 7.296875 13.875 7.5 M 18 3.375 L 18 11.625 C 18 12.554688 17.671875 13.351562 17.007812 14.007812 C 16.351562 14.671875 15.554688 15 14.625 15 L 10.875 15 C 10.773438 15 10.6875 14.960938 10.609375 14.890625 C 10.539062 14.8125 10.5 14.726562 10.5 14.625 C 10.5 14.59375 10.496094 14.515625 10.488281 14.390625 C 10.480469 14.265625 10.476562 14.164062 10.484375 14.078125 C 10.484375 14 10.5 13.90625 10.515625 13.804688 C 10.539062 13.703125 10.578125 13.625 10.632812 13.578125 C 10.695312 13.523438 10.773438 13.5 10.875 13.5 L 14.625 13.5 C 15.140625 13.5 15.582031 13.316406 15.949219 12.949219 C 16.316406 12.582031 16.5 12.140625 16.5 11.625 L 16.5 3.375 C 16.5 2.859375 16.316406 2.417969 15.949219 2.050781 C 15.582031 1.683594 15.140625 1.5 14.625 1.5 L 10.96875 1.5 L 10.835938 1.488281 L 10.699219 1.453125 L 10.605469 1.390625 L 10.523438 1.28125 L 10.5 1.125 C 10.5 1.09375 10.496094 1.015625 10.488281 0.890625 C 10.480469 0.765625 10.476562 0.664062 10.484375 0.578125 C 10.484375 0.5 10.5 0.40625 10.515625 0.304688 C 10.539062 0.203125 10.578125 0.125 10.632812 0.078125 C 10.695312 0.0234375 10.773438 0 10.875 0 L 14.625 0 C 15.554688 0 16.351562 0.328125 17.007812 0.992188 C 17.671875 1.648438 18 2.445312 18 3.375 "></path>
-                              </svg>
-                            </button>
-                          </form>
-                        </div>
-                        <p class="has-text-grey">
-                          <a href="../">Sign Up</a> &nbsp;·&nbsp;
-                          <a href="../">Forgot Password</a> &nbsp;·&nbsp;
-                          <a href="../">Need Help?</a>
-                        </p>
-                      </div>
-
+              <div class="announcements">
+                <div class="announcements-header">
+                  <h3>Анонсы</h3>
+                </div>
+                <div class="announcements-slider">
+                  <div class="announcement-image">
+                    <img src="./images/default.png">
+                  </div>
+                  <div class="announcement-info">
+                    <div class="announcement-info-content">
+                      <p class="announcement-date">
+                        <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M1 10H23V22C23 23.1046 22.1046 24 21 24H3C1.89543 24 1 23.1046 1 22V10Z" fill="#FFEDD6"></path>
+                          <path d="M1 10H23V22C23 23.1046 22.1046 24 21 24H3C1.89543 24 1 23.1046 1 22V10Z" stroke="#585858" stroke-linejoin="round"></path>
+                          <path d="M1 5C1 3.89543 1.89543 3 3 3H21C22.1046 3 23 3.89543 23 5V10H1V5Z" fill="#FFEDD6"></path>
+                          <path d="M1 5C1 3.89543 1.89543 3 3 3H21C22.1046 3 23 3.89543 23 5V10H1V5Z" stroke="#585858" stroke-linejoin="round"></path>
+                          <path d="M7 1V5" stroke="#585858" stroke-linecap="round" stroke-linejoin="round"></path>
+                          <path d="M18 1V5" stroke="#585858" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg>
+                        30.06.2025
+                      </p>
+                      <p class="announcement-title">Конкурс на должности преподавателей в сфере высшего образования по модулю дисциплин</p>
                     </div>
-
+                    <a href="/node/20147" class="announcement-link">
+                      Подробнее
+                    </a>
                   </div>
                 </div>
-
-              </section>
+                <div class="announcements-more-link">
+                  <a href="https://digital.spmi.ru/afisha/events" class="bottom-link">
+              
+                    <div class="affiche-button">
+                      <div class="columns is-mobile is-gapless is-multiline is-vcentered">
+                        <div class="column link-with-icon">
+                          <svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M26 31L32 29L26 28M26 31L5 31M26 31L26 28M26 28L5 28M5 28L2 28C1.44772 28 1 28.4477 1 29L1 30C1 30.5523 1.44772 31 2 31L5 31M5 28L5 31" stroke="#EFE1CE" stroke-linecap="round" stroke-linejoin="round"></path>
+                            <path d="M6 5H2C1.44772 5 1 5.44772 1 6V11H31V6C31 5.44772 30.5523 5 30 5H26M8 5H24" stroke="#EFE1CE" stroke-linejoin="round"></path>
+                            <rect x="1" y="11" width="10" height="7" stroke="#EFE1CE" stroke-linejoin="round"></rect>
+                            <path d="M1 18H11V25H2C1.44772 25 1 24.5523 1 24V18Z" stroke="#EFE1CE" stroke-linejoin="round"></path>
+                            <rect x="11" y="11" width="10" height="7" stroke="#EFE1CE" stroke-linejoin="round"></rect>
+                            <rect x="11" y="18" width="10" height="7" stroke="#EFE1CE" stroke-linejoin="round"></rect>
+                            <rect x="21" y="11" width="10" height="7" stroke="#EFE1CE" stroke-linejoin="round"></rect>
+                            <path d="M21 18H31V24C31 24.5523 30.5523 25 30 25H21V18Z" stroke="#EFE1CE" stroke-linejoin="round"></path>
+                            <rect x="6" y="1" width="2" height="6" stroke="#EFE1CE" stroke-linejoin="round"></rect>
+                            <rect x="24" y="1" width="2" height="6" stroke="#EFE1CE" stroke-linejoin="round"></rect>
+                          </svg>
+                          <p>Афиша</p>
+                        </div>
+                        <div class="column is-narrow">
+                          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14 2L2 14M14 2L2 2M14 2V14" stroke="white" stroke-linecap="round" stroke-linejoin="round"></path>
+                          </svg>
+                        </div>
+                      </div>
+                    </div>
+              
+                  </a>
+                </div>
+              </div>
 
             </main>
 
