--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -13,8 +13,8 @@
 
         <header>
 
-          <nav class="navbar">
-            <div class="container">
+          <nav class="navbar" style="background-color: #e5e9f0;">
+            <div class="container" style="background-color: #fff; border-radius: 1rem; border: 1px solid #e5e9f0;">
               <div class="navbar-brand">
                 <a class="navbar-item" href="/">
                   <img src="./images/logo_2.svg" alt="Logo">
