--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -48,9 +48,9 @@
               <a id="main-content" tabindex="-1"></a>
 
               <div class="mainpage-banner-section" style="background-color: #fff; margin-bottom: 5rem; border-radius: 1rem; padding-left: 8.33vw; display: flex; justify-content: space-between;">
-                <div class="mainpage-banner" style="display: flex;justify-content: space-between;">
+                <div class="mainpage-banner" style="display: flex;justify-content: space-between; align-items: center;">
                    <div class="banner-text">
-                       <h2 style="font-size: 2rem;font-weight: 700;">Banner title</h2>
+                       <h2 style="font-size: 2rem;font-weight: 700;">Инфраструктура</h2>
                    </div>
                    <div class="banner-image" style="width: 64%;">
                      <img src="./images/poster_1.png" style="width: 100%; border-radius: 1rem;">
