--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -47,9 +47,9 @@
 
               <a id="main-content" tabindex="-1"></a>
 
-              <div class="mainpage-banner-section" style="background-color: #fff; margin-bottom: 5rem; border-radius: 1rem; padding-left: 8.33vw; display: flex; justify-content: space-between;">
+              <div class="mainpage-banner-section" style="background-color: #fff; margin-bottom: 5rem; border-radius: 1rem; display: flex; justify-content: space-between;">
                 <div class="mainpage-banner" style="display: flex;justify-content: space-between; align-items: center;">
-                   <div class="banner-text">
+                   <div class="banner-text" padding: 70px 8.33vw 0 80px; >
                        <h2 style="font-size: 2rem;font-weight: 700;">Инфраструктура</h2>
                    </div>
                    <div class="banner-image" style="width: 64%;">
