--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -48,11 +48,11 @@
               <a id="main-content" tabindex="-1"></a>
 
               <div class="mainpage-banner-section" style="background-color: #fff; margin-bottom: 5rem; border-radius: 1rem; display: flex; justify-content: space-between;">
-                <div class="mainpage-banner" style="display: flex;justify-content: space-between; align-items: center;">
-                   <div class="banner-text" style="padding: 70px 8.33vw 0 80px; width: 23%;">
+                <div class="mainpage-banner" style="display: flex;justify-content: space-between;">
+                   <div class="banner-text" style="margin: 70px 80px 0 8.33vw;width: 23%;flex-shrink: 0;">
                        <h2 style="font-size: 2rem;font-weight: 700;">Инфраструктура</h2>
                    </div>
-                   <div class="banner-image">
+                   <div class="banner-image" style="flex-shrink: 1;">
                      <img src="./images/poster_1.png" style="width: 100%; border-radius: 1rem;">
                    </div>
                 </div>
