--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -52,7 +52,7 @@
                    <div class="banner-text" style="margin: 70px 80px 0 8.33vw;width: 23%;flex-shrink: 0;">
                        <h2 style="font-size: 2rem;font-weight: 700;">Инфраструктура</h2>
                    </div>
-                   <div class="banner-image" style="flex-shrink: 1;">
+                   <div class="banner-image" style="flex-shrink: 1; line-height: .75;">
                      <img src="./images/poster_1.png" style="width: 100%; border-radius: 1rem;">
                    </div>
                 </div>
