--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -51,6 +51,17 @@
                 <div class="mainpage-banner">
                    <div class="banner-text">
                       <p class="banner-title">Инфраструктура</p>
+                      <div class="banner-description">
+                        <ul>
+                          <li>3 учебных центра;</li>
+                          <li>Многофункциональный комплекс «Горный»;</li>
+                          <li>11 общежитий;</li>
+                          <li>7 учебных баз.</li>
+                        <ul>
+                      </div>
+                      <a href="/node/20147" class="banner-link">
+                        Подробнее
+                      </a>
                    </div>
                    <div class="banner-image">
                      <img src="./images/poster_1.png">
@@ -94,6 +105,22 @@
                 .banner-title {
                   font-size: 2rem;
                   font-weight: 700;
+                }
+                .banner-description {
+                  margin-top: 1.5rem;
+                }
+                .banner-link {
+                  margin-top: 2.5rem;
+                  color: #036;
+                  border-radius: 2rem;
+                  border: 1px solid #036;
+                  background: none;
+                  padding: 1.25rem 2rem;
+                  font-size: 1rem;
+                  font-weight: 700;
+                  line-height: 120%;
+                  margin: 0;
+                  width: 9.75rem;
                 }
                 .banner-image {
                   flex-shrink: 1;
