--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -106,6 +106,9 @@
                   list-style: disc outside;
                   margin-left: 2rem;
                 }
+                .banner-description li + li {
+                  margin-top: 1rem;
+                }
                 .banner-link {
                   display: block;
                   margin-top: 2.5rem;
