--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -122,6 +122,12 @@
                   line-height: 120%;
                   width: 9.75rem;
                 }
+                @media screen and (min-width: 1024px) {
+                  .banner-link:hover {
+                    background-color: #036;
+                    color: #fff;
+                  }
+                }
                 .banner-image {
                   flex-shrink: 1;
                   line-height: .75;
