--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -48,22 +48,36 @@
               <a id="main-content" tabindex="-1"></a>
 
               <div class="mainpage-banner-section">
-                <div class="mainpage-banner">
-                  <div class="banner-text">
-                      <p class="banner-title">Инфраструктура</p>
-                      <div class="banner-description">
-                        <ul>
-                          <li>3 учебных центра;</li>
-                          <li>Многофункциональный комплекс «Горный»;</li>
-                          <li>11 общежитий;</li>
-                          <li>7 учебных баз.</li>
-                        </ul>
-                      </div>
-                      <a href="/node/20147" class="banner-link">Подробнее</a>
+                <div id="mainpage-slider" class="keen-slider">
+                  <div class="keen-slider__slide number-slide1 mainpage-banner">
+                    <div class="banner-text">
+                        <p class="banner-title">Инфраструктура</p>
+                        <div class="banner-description">
+                          <ul>
+                            <li>3 учебных центра;</li>
+                            <li>Многофункциональный комплекс «Горный»;</li>
+                            <li>11 общежитий;</li>
+                            <li>7 учебных баз.</li>
+                          </ul>
+                        </div>
+                        <a href="/node/20147" class="banner-link">Подробнее</a>
+                    </div>
+                     <div class="banner-image">
+                       <img src="./images/poster_1.png">
+                     </div>
                   </div>
-                   <div class="banner-image">
-                     <img src="./images/poster_1.jpg">
-                   </div>
+                  <div class="keen-slider__slide number-slide2 mainpage-banner">
+                    <div class="banner-text">
+                        <p class="banner-title">В Горном идет приемная кампания</p>
+                        <div class="banner-description">
+                          Поступайте в первый технический вуз страны!
+                        </div>
+                        <a href="/node/20147" class="banner-link">Подробнее</a>
+                    </div>
+                     <div class="banner-image">
+                       <img src="./images/poster_1.png">
+                     </div>
+                  </div>
                 </div>
                 <div class="banner-flag">
                   <div class="white-strip-wrapper">
