--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bulma.min.css" />
     <link rel="stylesheet" href="./css/app.css" />
+    <link rel="stylesheet" href="./css/keen-slider.min.css" />
   </head>
 
   <body>
@@ -474,7 +475,7 @@
 
       </div>
     </div>
-
+    <script src="./js/keen-slider.min.js"></script>
     <script src="./js/app.js"></script>
   </body>
 
