--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -64,7 +64,7 @@
                         <a href="/node/20147" class="banner-link">Подробнее</a>
                     </div>
                      <div class="banner-image">
-                       <img src="./images/poster_1.png">
+                       <img src="./images/poster_1.jpg">
                      </div>
                   </div>
                   <div class="keen-slider__slide number-slide2 mainpage-banner">
@@ -76,7 +76,7 @@
                         <a href="/node/20147" class="banner-link">Подробнее</a>
                     </div>
                      <div class="banner-image">
-                       <img src="./images/poster_1.png">
+                       <img src="./images/poster_1.jpg">
                      </div>
                   </div>
                 </div>
