--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -73,10 +73,10 @@
                         <div class="banner-description">
                           Поступайте в первый технический вуз страны!
                         </div>
-                        <a href="/node/20147" class="banner-link">Подробнее</a>
+                        <a href="/node/20147" class="banner-link">Приёмная кампания 2025</a>
                     </div>
                      <div class="banner-image">
-                       <img src="./images/poster_1.jpg">
+                       <img src="./images/poster_2.jpg">
                      </div>
                   </div>
                 </div>
@@ -135,7 +135,6 @@
                   font-size: 1rem;
                   font-weight: 700;
                   line-height: 120%;
-                  width: 9.75rem;
                 }
                 @media screen and (min-width: 1024px) {
                   .banner-link:hover {
