--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -125,7 +125,7 @@
                   margin-top: 1rem;
                 }
                 .banner-link {
-                  display: block;
+                  display: inline-flex;
                   margin-top: 2.5rem;
                   color: #036;
                   border-radius: 2rem;
