--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -49,6 +49,8 @@
               <a id="main-content" tabindex="-1"></a>
 
               <div class="mainpage-banner-section">
+
+                <div class="navigation-wrapper">
                 <div id="mainpage-slider" class="keen-slider">
                   <div class="keen-slider__slide number-slide1 mainpage-banner">
                     <div class="banner-text">
@@ -79,6 +81,7 @@
                        <img src="./images/poster_2.jpg">
                      </div>
                   </div>
+                </div>
                 </div>
                 <div class="banner-flag">
                   <div class="white-strip-wrapper">
