--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -50,7 +50,7 @@
 
               <div class="mainpage-banner-section">
 
-                <div class="navigation-wrapper">
+                <div class="sliders-wrapper">
                 <div id="mainpage-slider" class="keen-slider">
                   <div class="keen-slider__slide number-slide1 mainpage-banner">
                     <div class="banner-text">
