--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -48,42 +48,44 @@
 
               <a id="main-content" tabindex="-1"></a>
 
-              <div class="mainpage-banner-section">
-
-                <div class="sliders-wrapper">
-                <div id="mainpage-slider" class="keen-slider">
-                  <div class="keen-slider__slide number-slide1 mainpage-banner">
-                    <div class="banner-text">
-                        <p class="banner-title">Инфраструктура</p>
-                        <div class="banner-description">
-                          <ul>
-                            <li>3 учебных центра;</li>
-                            <li>Многофункциональный комплекс «Горный»;</li>
-                            <li>11 общежитий;</li>
-                            <li>7 учебных баз.</li>
-                          </ul>
-                        </div>
-                        <a href="/node/20147" class="banner-link">Подробнее</a>
+              <div class="common-wrap">
+                <div class="mainpage-banner-section">
+                  <div class="sliders-wrapper">
+                  <div id="mainpage-slider" class="keen-slider">
+                    <div class="keen-slider__slide number-slide1 mainpage-banner">
+                      <div class="banner-text">
+                          <p class="banner-title">Инфраструктура</p>
+                          <div class="banner-description">
+                            <ul>
+                              <li>3 учебных центра;</li>
+                              <li>Многофункциональный комплекс «Горный»;</li>
+                              <li>11 общежитий;</li>
+                              <li>7 учебных баз.</li>
+                            </ul>
+                          </div>
+                          <a href="/node/20147" class="banner-link">Подробнее</a>
+                      </div>
+                       <div class="banner-image">
+                         <img src="./images/poster_1.jpg">
+                       </div>
                     </div>
-                     <div class="banner-image">
-                       <img src="./images/poster_1.jpg">
-                     </div>
+                    <div class="keen-slider__slide number-slide2 mainpage-banner">
+                      <div class="banner-text">
+                          <p class="banner-title">В Горном идет приемная кампания</p>
+                          <div class="banner-description">
+                            Поступайте в первый технический вуз страны!
+                          </div>
+                          <a href="/node/20147" class="banner-link">Приёмная кампания 2025</a>
+                      </div>
+                       <div class="banner-image">
+                         <img src="./images/poster_2.jpg">
+                       </div>
+                    </div>
                   </div>
-                  <div class="keen-slider__slide number-slide2 mainpage-banner">
-                    <div class="banner-text">
-                        <p class="banner-title">В Горном идет приемная кампания</p>
-                        <div class="banner-description">
-                          Поступайте в первый технический вуз страны!
-                        </div>
-                        <a href="/node/20147" class="banner-link">Приёмная кампания 2025</a>
-                    </div>
-                     <div class="banner-image">
-                       <img src="./images/poster_2.jpg">
-                     </div>
                   </div>
                 </div>
-                </div>
-                <div class="banner-flag">
+              </div>
+              <div class="banner-flag">
                   <div class="white-strip-wrapper">
                     <div class="white-strip"></div>
                   </div>
@@ -93,11 +95,11 @@
                   <div class="red-strip-wrapper">
                     <div class="red-strip"></div>
                   </div>
-                </div>
               </div>
+
               
               <style>
-                .mainpage-banner-section {
+                .common-wrap {
                   background-color: #fff;
                   margin-bottom: 5rem;
                   border-radius: 1rem;
