--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -106,6 +106,9 @@
                   display: flex; 
                   justify-content: space-between;
                 }
+                .mainpage-banner-section {
+                  flex-shrink: 1;
+                }
                 .mainpage-banner {
                   display: flex;
                   justify-content: space-between;
@@ -156,6 +159,7 @@
                   border-radius: 1rem;
                 }
                 .banner-flag {
+                  flex-shrink: 0;
                   width: 8.33vw;
                   display: flex;
                 }
