--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -107,7 +107,7 @@
                   justify-content: space-between;
                 }
                 .mainpage-banner-section {
-                  flex-shrink: 1;
+                  width: 91.67vw;
                 }
                 .mainpage-banner {
                   display: flex;
@@ -159,7 +159,6 @@
                   border-radius: 1rem;
                 }
                 .banner-flag {
-                  flex-shrink: 0;
                   width: 8.33vw;
                   display: flex;
                 }
