--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -109,6 +109,9 @@
                 .mainpage-banner-section {
                   width: 91.67vw;
                 }
+                #mainpage-slider {
+                  border-radius: 1rem;
+                }
                 .mainpage-banner {
                   display: flex;
                   justify-content: space-between;
