--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -211,7 +211,7 @@
                   border: 0;
                   width: .75rem !important;
                   height: .75rem;
-                  background: #ffffff;
+                  background: #003366;
                   border-radius: 50%;
                   margin: 0 .5rem;
                   padding: .35rem;
@@ -223,7 +223,7 @@
                   border: 0;
                   width: .75rem !important;
                   height: .75rem;
-                  background: #ffffff;
+                  background: #003366;
                   border-radius: 50%;
                   margin: 0 .5rem;
                   padding: .35rem;
