--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -201,6 +201,11 @@
                 .mainpage-slider-dots {
                   display: flex;
                   justify-content: flex-start;
+                  position: relative;
+                  left: 8.33vw;
+                  bottom: 4.375rem;
+                  height: 0;
+                  width: 25vw;
                 }
                 
                 .mainpage-slider-dots > :first-child {
