--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -208,7 +208,7 @@
                   width: 25vw;
                 }
                 
-                .mainpage-slider-dots > :first-child {
+                .mainpage-banner-section .dots > :first-child {
                   margin-left: 0;
                 }
                 
