--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -135,9 +135,21 @@
                 .banner-title {
                   font-size: 2rem;
                   font-weight: 700;
+                  line-height: 120%;
+                }
+                @media screen and (min-width: 500px) and (max-width: 1407px) {
+                  .banner-title {
+                    font-size: 1.5rem;
+                  }
                 }
                 .banner-description {
                   margin-top: 1.5rem;
+                  font-size: 1.125rem;
+                }
+                @media screen and (max-width: 1407px) {
+                  .banner-description {
+                    font-size: 1rem;
+                  }
                 }
                 .banner-description ul {
                   list-style: disc outside;
