--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -146,6 +146,11 @@
                   margin-top: 1.5rem;
                   font-size: 1.125rem;
                 }
+                @media screen and (min-width: 1024px) and (max-width: 1407px) {
+                  .banner-description {
+                    margin-top: .75rem;
+                  }
+                }
                 @media screen and (max-width: 1407px) {
                   .banner-description {
                     font-size: 1rem;
@@ -169,6 +174,11 @@
                   font-size: 1rem;
                   font-weight: 700;
                   line-height: 120%;
+                }
+                @media screen and (min-width: 1024px) and (max-width: 1407px) {
+                  .banner-link {
+                    margin-top: 1.5rem;
+                  }
                 }
                 @media screen and (min-width: 1024px) {
                   .banner-link:hover {
