--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -96,7 +96,6 @@
                   </div>
                 </div>
               </div>
-
               
               <style>
                 .mainpage-banner-section {
@@ -267,6 +266,35 @@
                   padding: .35rem;
                   cursor: pointer;
                   opacity: 100%;
+                }
+              </style>
+
+
+              <div class="banner-menu">
+                <div class="banner-menu-items">
+                  <div class="banner-menu-item">Абитуриентам</div>
+                  <div class="banner-menu-item">Студентам</div>
+                  <div class="banner-menu-item">Аспирантам</div>
+                  <div class="banner-menu-item">Сотрудникам</div>
+                  <div class="banner-menu-item">Абитуриентам</div>
+                </div>
+              </div>
+
+              <style type="text/css">
+                .banner-menu {
+                  background-color: #E5E9F0;
+                }
+                .banner-menu-items {
+                  padding: 0 8.33vw;
+                  display: flex;
+                }
+                .banner-menu-item {
+                  width: 20%;
+                  background-color: #003366;
+                  color: #ffffff;
+                  padding: 1.5rem;
+                  border: 1px solid #E5E9F0;
+                  border-radius: 1rem;
                 }
               </style>
 
