--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -283,6 +283,7 @@
               <style type="text/css">
                 .banner-menu {
                   background-color: #E5E9F0;
+                  margin-bottom: 10rem;
                 }
                 .banner-menu-items {
                   padding: 0 8.33vw;
